--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+## suppress inspection "UnusedProperty"
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+## suppress inspection "UnusedProperty"
+#spring.jpa.hibernate.ddl-auto=update
+## suppress inspection "UnusedProperty"
+#spring.jpa.hibernate.show-sql=true
+## suppress inspection "UnusedProperty"
+#spring.datasource.url=jdbc:postgresql://localhost:5432/account
+## suppress inspection "UnusedProperty"
+#spring.datasource.username=postgres
+## suppress inspection "UnusedProperty"
+#spring.datasource.password=12345
+## suppress inspection "UnusedProperty"
+#spring.jpa.properties.javax.persistence.validation.mode = none
